--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
 # application.properties -> server.port=8080
 server:
   port: 8080
+
 spring:
   application:
     name: 251204_sb
   profiles:
     active: dev
-# dev , prod 공통 설정
+  # dev, prod 공통 설정
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
